fixed letter spacing

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
 
 header {
     font-family: 'Inter', sans-serif;
+    letter-spacing: 0.1em;
     box-shadow: 0px 1px 10px hsl(0, 0%, 80%);
     background: hsl(0, 0%, 96%);
     width: 100vw;
